# ProbabilityTheory

./: CMakeLists.txt  main.cpp  task_2_14.cpp  task_3_6.cpp  task_4_34.cpp  task_5_27.cpp  task_6_19.cpp  task_7_17.cpp  task_8_40.cpp  task_9_8.cpp  test.cpp
C-plus-plus-sources/: main.cpp
C-plus-plus-sources/headers/helpers/: NumberGenerator.h
C-plus-plus-sources/headers/tasks/: Task_10_8.h  Task_11_3.h  Task_12_1.h  Task_13_24.h  Task_19_11.h  Task_2_14.h  Task_5_27.h  Task_7_17.h  Task_8_40.h  Task_9_8.h
C-plus-plus-sources/sources/helpers/: NumberGenerator.cpp
C-plus-plus-sources/sources/tasks/: Task_10_8.cpp  Task_11_3.cpp  Task_12_1.cpp  Task_13_24.cpp  Task_19_11.cpp  Task_2_14.cpp  Task_3_6.cpp  Task_4_34.cpp  Task_5_27.cpp  Task_6_19.cpp  Task_7_17.cpp  Task_8_40.cpp  Task_9_8.cpp
Matlab/task_3a/: Task_3a.txt  matlab.mat  program.m
Python-sources/ball_boxes/: main.py  test.txt
Python-sources/balls/: main.py  task_1_balls.txt
Python-sources/task_2/: main.py
Python-sources/task_3a/: Task_3a.txt  main.py
headers/helpers/: Initializer.h  NumberGenerator.h
headers/tasks/: Task_2_14.h  Task_3_6.h  Task_4_34.h  Task_5_27.h  Task_6_19.h  Task_7_17.h  Task_8_40.h  Task_9_8.h
sources/helpers/: Initializer.cpp  NumberGenerator.cpp
sources/tasks/: Task_10_8.cpp  Task_11_3.cpp  Task_12_1.cpp  Task_2_14.cpp  Task_3_6.cpp  Task_4_34.cpp  Task_5_27.cpp  Task_6_19.cpp  Task_7_17.cpp  Task_8_40.cpp  Task_9_8.cpp
